Add standalone fake Kafka producer for end-to-end checks