@@ -1,15 +1,16 @@
 package com.example.kafkaservice.finaltable;
 
-import com.example.kafkaservice.apply.FinalUpsertItem;
+import com.example.kafkaservice.apply.EntityTwoData;
+import com.example.kafkaservice.apply.EntityTwoKey;
 import lombok.RequiredArgsConstructor;
 import org.springframework.jdbc.core.BatchPreparedStatementSetter;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Repository;
 
+import java.sql.Date;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -21,26 +22,44 @@ public class EntityTwoRepository {
 
     private final NamedParameterJdbcTemplate jdbcTemplate;
 
-    public void batchUpsert(List<FinalUpsertItem> records) {
+    public void batchUpsert(List<EntityTwoData> records) {
         if (records.isEmpty()) {
             return;
         }
 
         jdbcTemplate.getJdbcTemplate().batchUpdate(
                 """
-                insert into final_entity_2 (business_id, entity1_business_id, payload)
-                values (?, ?, cast(? as jsonb))
-                on conflict (business_id) do update set
-                    entity1_business_id = excluded.entity1_business_id,
-                    payload = excluded.payload
+                insert into final_entity_2 (
+                    cm_id,
+                    answer_date,
+                    created_at,
+                    event_type_id,
+                    trend_uuid,
+                    summary_uuid,
+                    client_segment_code,
+                    product_id,
+                    prev_product_id
+                ) values (?, ?, ?, ?, ?, ?, ?, ?, ?)
+                on conflict (cm_id, trend_uuid, summary_uuid, answer_date) do update set
+                    created_at = excluded.created_at,
+                    event_type_id = excluded.event_type_id,
+                    client_segment_code = excluded.client_segment_code,
+                    product_id = excluded.product_id,
+                    prev_product_id = excluded.prev_product_id
                 """,
                 new BatchPreparedStatementSetter() {
                     @Override
                     public void setValues(PreparedStatement ps, int i) throws SQLException {
-                        FinalUpsertItem record = records.get(i);
-                        ps.setString(1, record.businessId());
-                        ps.setString(2, record.parentBusinessId());
-                        ps.setString(3, record.payload());
+                        EntityTwoData record = records.get(i);
+                        ps.setString(1, record.cmId());
+                        ps.setObject(2, record.answerDate() == null ? null : Date.valueOf(record.answerDate()));
+                        ps.setObject(3, record.createdAt() == null ? null : Date.valueOf(record.createdAt()));
+                        ps.setObject(4, record.eventTypeId());
+                        ps.setString(5, record.trendUuid());
+                        ps.setString(6, record.summaryUuid());
+                        ps.setString(7, record.clientSegmentCode());
+                        ps.setObject(8, record.productId());
+                        ps.setObject(9, record.prevProductId());
                     }
 
                     @Override
@@ -51,26 +70,81 @@ public class EntityTwoRepository {
         );
     }
 
-    public Map<String, String> findPayloadByBusinessIds(Set<String> businessIds) {
-        if (businessIds.isEmpty()) {
-            return Collections.emptyMap();
+    public Map<EntityTwoKey, EntityTwoComparable> findComparableByKeys(Set<EntityTwoKey> keys) {
+        if (keys.isEmpty()) {
+            return Map.of();
+        }
+
+        StringBuilder query = new StringBuilder(
+                """
+                select cm_id,
+                       trend_uuid,
+                       summary_uuid,
+                       answer_date,
+                       event_type_id,
+                       client_segment_code,
+                       product_id,
+                       prev_product_id
+                from final_entity_2
+                where
+                """
+        );
+
+        MapSqlParameterSource params = new MapSqlParameterSource();
+        int idx = 0;
+        for (EntityTwoKey key : keys) {
+            if (idx > 0) {
+                query.append(" or ");
+            }
+            query.append("(cm_id = :cm").append(idx)
+                    .append(" and trend_uuid = :tr").append(idx)
+                    .append(" and summary_uuid = :su").append(idx)
+                    .append(" and answer_date = :ad").append(idx)
+                    .append(")");
+
+            params.addValue("cm" + idx, key.cmId());
+            params.addValue("tr" + idx, key.trendUuid());
+            params.addValue("su" + idx, key.summaryUuid());
+            params.addValue("ad" + idx, key.answerDate());
+            idx++;
         }
 
         return jdbcTemplate.query(
-                """
-                select business_id,
-                       payload::text as payload
-                from final_entity_2
-                where business_id in (:ids)
-                """,
-                new MapSqlParameterSource("ids", businessIds),
+                query.toString(),
+                params,
                 rs -> {
-                    Map<String, String> result = new HashMap<>();
+                    Map<EntityTwoKey, EntityTwoComparable> result = new HashMap<>();
                     while (rs.next()) {
-                        result.put(rs.getString("business_id"), rs.getString("payload"));
+                        EntityTwoKey key = new EntityTwoKey(
+                                rs.getString("cm_id"),
+                                rs.getString("trend_uuid"),
+                                rs.getString("summary_uuid"),
+                                rs.getDate("answer_date").toLocalDate()
+                        );
+
+                        result.put(key, new EntityTwoComparable(
+                                (Integer) rs.getObject("event_type_id"),
+                                rs.getString("client_segment_code"),
+                                (Integer) rs.getObject("product_id"),
+                                (Integer) rs.getObject("prev_product_id")
+                        ));
                     }
                     return result;
                 }
         );
+    }
+
+    public record EntityTwoComparable(
+            Integer eventTypeId,
+            String clientSegmentCode,
+            Integer productId,
+            Integer prevProductId
+    ) {
+        public boolean isChangedComparedTo(EntityTwoData data) {
+            return !java.util.Objects.equals(eventTypeId, data.eventTypeId())
+                    || !java.util.Objects.equals(clientSegmentCode, data.clientSegmentCode())
+                    || !java.util.Objects.equals(productId, data.productId())
+                    || !java.util.Objects.equals(prevProductId, data.prevProductId());
+        }
     }
 }
